--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
             "url"  : "https://github.com/satyr/coco/raw/master/LICENSE"
         }
     ],
-    "engines"     : {"node": ">=0.4.0"},
+    "engines"     : {"node": ">= 0.4.0"},
     "directories" : {"lib" : "./lib"  },
     "main" : "./lib/main",
     "bin" : {
@@ -24,8 +24,8 @@
         "optimist": "0.2.3"
      },
      "devDependencies" : {
-        "pegjs": ">=0.6.0",
-        "coco": "0.5.4",
+        "pegjs": "0.6.x",
+        "coco": "0.5.x",
         "inotify": "latest"
      }
 }
